# actix-question-bank-stackoverflow

./: .env  Cargo.toml  database.sql  docker-compose.yaml  readme.md  sse.md  tag.json
src/: api_handlers.rs  config.rs  db.rs  error.rs  handlers.rs  main.rs  models.rs  scraper.rs
static/: style.css
templates/: create_success.stpl  home.stpl  question_by_tag.stpl  questions.stpl  tags.stpl
