[package]
name = "actix-question-bank-stackoverflow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# pg-mapper and pg-mapper-derive are used to map the postgres model to struct
# deadpool postgres is used to connect / facilitate the connection to postgres
# tokio-postgres is client for async call for postgres

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
actix-http = "1.0.1"
actix-service = "1.0.5"
futures = "0.3.4"
dotenv = "0.15.0"
config = "0.11.0"
serde = { version = "1.0.104", features = ["derive"] }
tokio-pg-mapper = "0.1.4"
tokio-pg-mapper-derive = "0.1.4"
deadpool-postgres = { version="0.5.0", features = ["serde"]}
tokio-postgres = "0.5.1"
sailfish = "0.3.3"
rand = "0.8.4"
select = "0.6.0-alpha.1"
actix-files = "0.2.2"
reqwest = { version = "0.10", features = ["json"] }
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
regex = "1.5.6"
validator = { version = "0.15", features = ["derive"] }